[package]
name = "vyom"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.47", features = ["derive"] }
jiff = { version = "0.2.15", features = ["serde"] }
rocksdb = "0.23.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "rt",
  "rt-multi-thread",
] }
